tests/core/snapshots/test-required-fields.md_17.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "outerEntryMissing": [
        {
          "id": 1,
          "bar": "bar_1"
        },
        null
      ]
    }
  }
}
