tests/core/snapshots/test-required-fields.md_19.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "noneMissing": null
    }
  }
}
