tests/core/snapshots/test-required-fields.md_3.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "relaxedPresent": {
        "id": 1,
        "bar": "bar_1"
      }
    }
  }
}
